src/objects/CC_Application__c.object
<CustomObject>
    <fields>
        <fullName>CC_App_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In-Progress</fullName>
                    <default>true</default>
                    <label>In-Progress</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Reviewed</fullName>
                </value>
                <value>
                    <fullName>Revision Needed</fullName>
                </value>
                <value>
                    <fullName>Saved</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
                <value>
                    <fullName>Resubmitted</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Capacity Reviewed</fullName>
                    <isActive>false</isActive>
                    <label>Capacity Reviewed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CC_Applying_on_behalf_of_applicant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Applying on behalf of applicant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CC_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CC_Describe_why_services_are_needed__c</fullName>
        <label>Describe why services are needed?</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CC_Does_Individual_have_Auth_Rep__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Does Individual have Auth Rep</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CC_Explain_Where_do_you_prefer__c</fullName>
        <label>Explain Where do you prefer to live</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CC_Explain_living_situation__c</fullName>
        <label>Explain living situation</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CC_Hard_copy_Signature_received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hard copy Signature received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CC_How_Auth_Rep_Related_To_You__c</fullName>
        <label>How Auth Rep Related To You?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adopted Daughter</fullName>
                </value>
                <value>
                    <fullName>Adopted Son</fullName>
                </value>
                <value>
                    <fullName>Aunt (Including Great)</fullName>
                </value>
                <value>
                    <fullName>Brother/ Half-Brother</fullName>
                </value>
                <value>
                    <fullName>Daughter</fullName>
                </value>
                <value>
                    <fullName>Father</fullName>
                </value>
                <value>
                    <fullName>First Cousin</fullName>
                </value>
                <value>
                    <fullName>First Cousin - Once Removed</fullName>
                </value>
                <value>
                    <fullName>Foster Child</fullName>
                </value>
                <value>
                    <fullName>Foster Parent</fullName>
                </value>
                <value>
                    <fullName>Granddaughter (Including Great)</fullName>
                </value>
                <value>
                    <fullName>Grandfather (Including Great)</fullName>
                </value>
                <value>
                    <fullName>Grandmother (Including Great)</fullName>
                </value>
                <value>
                    <fullName>Grandson (Including Great)</fullName>
                </value>
                <value>
                    <fullName>Legal Guardian</fullName>
                </value>
                <value>
                    <fullName>Legally Guarded</fullName>
                </value>
                <value>
                    <fullName>Living Together Partner</fullName>
                </value>
                <value>
                    <fullName>Mother</fullName>
                </value>
                <value>
                    <fullName>Nephew (Including Great)</fullName>
                </value>
                <value>
                    <fullName>Niece (Including Great)</fullName>
                </value>
                <value>
                    <fullName>Other Relationship</fullName>
                </value>
                <value>
                    <fullName>Sister/ Half Sister</fullName>
                </value>
                <value>
                    <fullName>Son</fullName>
                </value>
                <value>
                    <fullName>Spouse</fullName>
                </value>
                <value>
                    <fullName>Step Brother</fullName>
                </value>
                <value>
                    <fullName>Step Daughter</fullName>
                </value>
                <value>
                    <fullName>Step Father</fullName>
                </value>
                <value>
                    <fullName>Step Granddaughter (Including Great)</fullName>
                </value>
                <value>
                    <fullName>Step Grandfather (Including Great)</fullName>
                </value>
                <value>
                    <fullName>Step Grandmother (Including Great)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CC_How_Is_Legal_Guardian_Related_To_You__c</fullName>
        <label>How Is Legal Guardian Related To You?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adopted Daughter</fullName>
                </value>
                <value>
                    <fullName>Adopted Son</fullName>
                </value>
                <value>
                    <fullName>Aunt (Including Great)</fullName>
                </value>
                <value>
                    <fullName>Brother/ Half-Brother</fullName>
                </value>
                <value>
                    <fullName>Daughter</fullName>
                </value>
                <value>
                    <fullName>Father</fullName>
                </value>
                <value>
                    <fullName>First Cousin</fullName>
                </value>
                <value>
                    <fullName>First Cousin - Once Removed</fullName>
                </value>
                <value>
                    <fullName>Foster Child</fullName>
                </value>
                <value>
                    <fullName>Foster Parent</fullName>
                </value>
                <value>
                    <fullName>Granddaughter (Including Great)</fullName>
                </value>
                <value>
                    <fullName>Grandfather (Including Great)</fullName>
                </value>
                <value>
                    <fullName>Grandmother (Including Great)</fullName>
                </value>
                <value>
                    <fullName>Grandson (Including Great)</fullName>
                </value>
                <value>
                    <fullName>Legal Guardian</fullName>
                </value>
                <value>
                    <fullName>Legally Guarded</fullName>
                </value>
                <value>
                    <fullName>Living Together Partner</fullName>
                </value>
                <value>
                    <fullName>Mother</fullName>
                </value>
                <value>
                    <fullName>Nephew (Including Great)</fullName>
                </value>
                <value>
                    <fullName>Niece (Including Great)</fullName>
                </value>
                <value>
                    <fullName>Other Relationship</fullName>
                </value>
                <value>
                    <fullName>Sister/ Half Sister</fullName>
                </value>
                <value>
                    <fullName>Son</fullName>
                </value>
                <value>
                    <fullName>Spouse</fullName>
                </value>
                <value>
                    <fullName>Step Brother</fullName>
                </value>
                <value>
                    <fullName>Step Daughter</fullName>
                </value>
                <value>
                    <fullName>Step Father</fullName>
                </value>
                <value>
                    <fullName>Step Granddaughter (Including Great)</fullName>
                </value>
                <value>
                    <fullName>Step Grandfather (Including Great)</fullName>
                </value>
                <value>
                    <fullName>Step Grandmother (Including Great)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CC_How_soon_services_needed__c</fullName>
        <label>How soon are the services needed?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Immediately (health and safety)</fullName>
                </value>
                <value>
                    <fullName>More than a year</fullName>
                </value>
                <value>
                    <fullName>Within 1 year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CC_Individual_Also_Your_Legal_Guardian__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Individual Also Your Legal Guardian?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CC_Individual__c</fullName>
        <label>Individual</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please enter Contact of Record Type Individual.</errorMessage>
            <filterItems>
                <field>Contact.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>CC_Individual</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CC_Information_is_correct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Information is correct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CC_Is_Living_Situation_Working__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Living Situation Working?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CC_On_Any_Waiver_Waiting_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On Any Waiver Waiting List?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CC_Other_Waiver_Program_Name__c</fullName>
        <label>Other Waiver Program Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_What_list_is_the_individual_on__c</fullName>
        <defaultValue>false</defaultValue>
        <label>What list is the individual on?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CC_Where_do_you_Prefer__c</fullName>
        <label>Where do you prefer to live</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>At home with a family member with someone to come in and help</fullName>
                </value>
                <value>
                    <fullName>Group Residential Care Setting - Assisted Living</fullName>
                </value>
                <value>
                    <fullName>Group Residential Care Setting - Licensed Adult Family Care Home</fullName>
                </value>
                <value>
                    <fullName>Health Care Facility/Institution - Hospice Care Facility</fullName>
                </value>
                <value>
                    <fullName>Health Care Facility/Institution - ICF-IID</fullName>
                </value>
                <value>
                    <fullName>Health Care Facility/Institution - Mental Health Institute/State Psychiatric Institute</fullName>
                </value>
                <value>
                    <fullName>Health Care Facility/Institution - Nursing Home</fullName>
                </value>
                <value>
                    <fullName>Health Care Facility/Institution - Personal Care Home</fullName>
                </value>
                <value>
                    <fullName>Home/apartment for which lease is held by support services provider</fullName>
                </value>
                <value>
                    <fullName>In residential services in a community home with staff</fullName>
                </value>
                <value>
                    <fullName>In residential services in the community living with a family</fullName>
                </value>
                <value>
                    <fullName>In your own home with support</fullName>
                </value>
                <value>
                    <fullName>Living alone in own home or apartment</fullName>
                </value>
                <value>
                    <fullName>No Permanent Residence (e.g. homeless shelter etc.)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Receive Public Housing Assistance</fullName>
                </value>
                <value>
                    <fullName>Rent Home/Apartment</fullName>
                </value>
                <value>
                    <fullName>Someone Else&apos;s Home or Apartment</fullName>
                </value>
                <value>
                    <fullName>Unable to determine person&apos;s preference for living arrangement</fullName>
                </value>
                <value>
                    <fullName>Where you are currently living</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CC_Where_does_the_individual_live__c</fullName>
        <label>Where does the individual live?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-2 Bed Adult Family Home (certified)</fullName>
                </value>
                <value>
                    <fullName>Foster Care</fullName>
                </value>
                <value>
                    <fullName>Group home</fullName>
                </value>
                <value>
                    <fullName>Group Residential Care Setting - Assisted Living</fullName>
                </value>
                <value>
                    <fullName>Group Residential Care Setting - Licensed Adult Family Care Home</fullName>
                </value>
                <value>
                    <fullName>Home/apartment for which lease is held by support services provider</fullName>
                </value>
                <value>
                    <fullName>Homeless shelter</fullName>
                </value>
                <value>
                    <fullName>Hospice Care Facility</fullName>
                </value>
                <value>
                    <fullName>ICF/IDD (Intermediate Care Facility)</fullName>
                </value>
                <value>
                    <fullName>Jail</fullName>
                </value>
                <value>
                    <fullName>Living in own home or apartment</fullName>
                </value>
                <value>
                    <fullName>Living with a friend</fullName>
                </value>
                <value>
                    <fullName>Living with family/relative</fullName>
                </value>
                <value>
                    <fullName>No Permanent Residence</fullName>
                </value>
                <value>
                    <fullName>Nursing home</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Other Paid caregiver&apos;s home</fullName>
                </value>
                <value>
                    <fullName>Personal care home</fullName>
                </value>
                <value>
                    <fullName>Psychiatric Facility</fullName>
                </value>
                <value>
                    <fullName>Receives Public Housing Assistance</fullName>
                </value>
                <value>
                    <fullName>Rents Home/Apartment</fullName>
                </value>
                <value>
                    <fullName>Someone Else&apos;s Home or Apartment</fullName>
                </value>
                <value>
                    <fullName>Staffer Home</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CC_You_Your_Guardian_LiveAt_Same_Place__c</fullName>
        <defaultValue>false</defaultValue>
        <label>You and Your Guardian Live at Same Place</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CC_You_Your_Rep_LiveAt_Same_Place__c</fullName>
        <defaultValue>false</defaultValue>
        <label>You and Your Rep Live at Same Place?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CC_individual_have_LegalGuardian__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Does the individual have LegalGuardian</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <formula>CC_Case__r.CaseNumber</formula>
        <label>Case Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Waiver_App_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Waiver Application Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Selected_Program_Value__c</fullName>
        <label>Selected Program Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <label>Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Visited_Pages__c</fullName>
        <label>Visited Pages</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contact Information</fullName>
                </value>
                <value>
                    <fullName>Representative Information</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Living Situation</fullName>
                </value>
                <value>
                    <fullName>Documents</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Waiver_Confirmation_Comments__c</fullName>
        <label>Waiver Confirmation Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Application</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>A-000942</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>